# image-video-computing

./: .gitignore  README.md
pa1/: CMakeLists.txt  build.sh
pa1/csrc/: CMakeLists.txt  edge.cc  filtering.cc
pa1/csrc/test/: CMakeLists.txt  filter_test.cc  read_render_save.cc
pa1/include/canny/: edge.h  filtering.h
pa2/pa2/: CMakeLists.txt  test.sh
pa2/pa2/csrc/: CMakeLists.txt  hough.cc  morphology.cc
pa2/pa2/csrc/test/: CMakeLists.txt  morphology_test.cc
pa2/pa2/include/hough/: hough.h  morphology.h
pa2_libs/cmake/modules/: FindHoughLibs.cmake
pa2_libs/include/585/common/: types.h
pa2_libs/include/585/filtering/: filtering.h
pa2_libs/include/585/hough/: hough.h
pa2_libs/include/585/imgproc/: imgproc.h
pa2_libs/include/585/io/: io.h
pa3/: CMakeLists.txt
pa3/csrc/: CMakeLists.txt  mnist_experiments.cc  vbow.cc
pa3/csrc/test/: CMakeLists.txt  vbow_test.cc
pa3/include/vbow/: vbow.h
pa3_libs/cmake/modules/: FindImClsLibs.cmake
pa3_libs/include/585/grad/: grad.h
pa3_libs/include/585/hough/: hough.h
pa3_libs/include/585/imgproc/: imgproc.h  morphology.h
pa3_libs/include/585/opencv/: opencv.h
pa3_libs/include/585/vbow/: vbow.h
wa1/: wa1.tex
